<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.candy.srini.bmical.MainActivity"
    tools:showIn="@layout/activity_main"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Srini's BMI calculator"
        android:textSize="16sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.85"
            android:text="Height"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/field_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.95"
            android:hint="in Meter" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Weight"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/field_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="in Kilogram" />
    </LinearLayout>

    <Button
        android:id="@+id/button_calc"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Calculate" />

    <TextView
        android:textColor="@color/colorPrimary"
        android:id="@+id/view_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="25sp" />

    <TextView
        android:textColor="@color/colorPrimary"
        android:id="@+id/view_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:text=""
        android:textSize="25sp"/>

</LinearLayout>